# raytracing

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  benchmark_aabb.py  benchmark_bvh.py  build_log.txt  camera.py  config.py  cpp_engine.cp314-win_amd64.pyd  denoise.py  download_oidn.py  hittable.py  loader.py  main.py  main_cpp.py  material.py  materials.py  meshloader.py  preview.py  pyproject.toml  quad.py  ray.py  renderer.py  scene.py  scenes.py  serializer.py  setup.bat  setup.sh  setup_project.py  sphere.py  transforms.py  vec3.py  verify_editor_state.py  verify_sobol.py  visualize_bluenoise.py  visualize_samplers.py
benchmark/: data_cur.json  data_prec.json  data_ref.json  report.md
docs/: architecture.md  atmospheric_fog.md  audit.md  future_roadmap.md  guidelines.md  path_tracing_guide.md  ui_design_system.md
modes/: renderer.py  viewer.py  viewer_legacyV2.py  viewer_pygames.py
modes/editor/: main.py  state.py  ui_core.py
modes/editor/panels/: __init__.py  layout_global.py  tab_create.py  tab_object.py  tab_object2.py  tab_render.py  tab_scene.py
src/: advanced_geometries.h  bvh.h  camera.h  common.h  environment.h  flat_bvh.h  geometry.h  hittable.h  instance.h  main.cpp  materials.h  renderer.h  sampler.h  texture.h
