[project]
name = "raytracing"
version = "0.1.0"
description = "A Python Path Tracer with C++ Core"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
    "pillow>=10.0.0",
    "nanobind",
    "imageio[freeimage,pyav]>=2.37.2",
    "tqdm>=4.67.1",
    "imageio-ffmpeg>=0.6.0",
    "opencv-python",
    "cmake>=3.20",
    "ninja",
    "trimesh>=4.10.1",
    "scipy>=1.15.3",
]

[build-system]
requires = ["scikit-build-core>=0.3.3", "nanobind>=1.3.2"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = ">=3.15"
